AC_INIT([vARCH], [0.1], [ben.vighy@gmail.com])

AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([dist-bzip2 -Wall])

AC_PROG_CXX
AM_PROG_LEX
AC_PROG_YACC

# AM_CONFIG_HEADER([include/config.h])
AC_CONFIG_HEADERS([include/config.h])
AC_CONFIG_FILES([
	Makefile
	src/Makefile
	src/new-asm/Makefile
	src/trans-asm/Makefile
])

AC_OUTPUT
