bin_PROGRAMS = varch vasm trans-vasm

varch_SOURCES = Mmu.cpp \
		Component.cpp \
		Cpu.cpp \
		Chipset.cpp \
		FileHandler.cpp \
		SystemTimer.cpp \
		CharTerminal.cpp \
		vArch.cpp

vasm_SOURCES =  FileHandler.cpp \
                FunctionRecord.cpp \
                CodeOrganizer.cpp \
                AsmParser.cpp \
                vAsm.cpp

trans_vasm_SOURCES = FileHandler.cpp \
		trans-asm/asm-lexer.cpp \
		trans-asm/asm-parser.cpp
